<resources>
    <string name="app_name">Calculator</string>
    <string name="title_all_clear">AC</string>
    <string name="title_percentage">%</string>
    <string name="title_plus_minus">+/-</string>
    <string name="title_division">/</string>
    <string name="title_number_seven">7</string>
    <string name="title_number_eight">8</string>
    <string name="title_number_nine">9</string>
    <string name="title_multiplication">x</string>
    <string name="title_number_five">5</string>
    <string name="title_number_six">6</string>
    <string name="title_subtraction">-</string>
    <string name="title_number_one">1</string>
    <string name="title_number_two">2</string>
    <string name="title_number_three">3</string>
    <string name="title_addition">+</string>
    <string name="title_number_zero">0</string>
    <string name="title_dot">.</string>
    <string name="title_equal">=</string>
    <string name="title_number_four">4</string>
    <string name="default_result">0</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_save">Save Last Result</string>
    <string name="line">--------------</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
